Added new repos

--- a/src/Platform.Infrastructure.Core/Platform.Infrastructure.Core.csproj
+++ b/src/Platform.Infrastructure.Core/Platform.Infrastructure.Core.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CustomException\Platform.Infrastructure.CustomException.csproj" />
     <ProjectReference Include="..\Platform.Infrastructure.Common\Platform.Infrastructure.Common.csproj" />
   </ItemGroup>
 
