--- a/src/Repository/Platform.Infrastructure.Repository.EF.csproj
+++ b/src/Repository/Platform.Infrastructure.Repository.EF.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.Extensions" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="7.3.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Platform.Infrastructure.Repository.Contract\Platform.Infrastructure.Repository.Contract.csproj" />
+    <ProjectReference Include="..\Platform.Infrastructure.Core\Platform.Infrastructure.Core.csproj" />
   </ItemGroup>
 
 </Project>
