--- a/test/UAM.Domain.Test/UAM.Domain.Test.csproj
+++ b/test/UAM.Domain.Test/UAM.Domain.Test.csproj
@@ -25,7 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Platform.Infrastructure.Common\Platform.Infrastructure.Common.csproj" />
     <ProjectReference Include="..\..\src\Platform.Infrastructure.Core\Platform.Infrastructure.Core.csproj" />
-    <ProjectReference Include="..\..\src\Repository\Platform.Infrastructure.Repository.csproj" />
+    <ProjectReference Include="..\..\src\Repository\Platform.Infrastructure.Repository.EF.csproj" />
     <ProjectReference Include="..\..\src\UAM.Common\UAM.Common.csproj" />
     <ProjectReference Include="..\..\src\UAM.Domain\UAM.Domain.csproj" />
   </ItemGroup>
