--- a/src/ProductExample.EventHandlers/ProductExample.EventHandlers.csproj
+++ b/src/ProductExample.EventHandlers/ProductExample.EventHandlers.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Platform.Infrastructure.Core\Platform.Infrastructure.Core.csproj" />
+    <ProjectReference Include="..\ProductExample.Events\ProductExample.Events.csproj" />
+  </ItemGroup>
+
 </Project>
