refactored to make it simpler

--- a/src/ProductExample.CommandWebHost/appsettings.json
+++ b/src/ProductExample.CommandWebHost/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "\"\"AllowedHosts\": \"*\",": null,
+  "ServiceName": "ProductExample.CommandWebHost",
+  "ServiceId": "product_web_host", 
+  "EndpointRoleFeatureMapFilePath": "C:\\Shohoz\\features.json",
+  "ServiceRegistrationsFilePath": "C:\\Shohoz\\ServiceRegistrations.json",
+  "AuthorizationServerAddress": "http://loclahost",
+  "DefaultLogLevel": "info",
+  "BusConfig": {
+    "ConnectionString": "amqp://test:test@localhost:5672/",
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueName": "ProductExample.Commands",
+    "PrefetchCount": 5,
+    "RetryCount": 2,
+    "RetryInterval": 5
   },
-  "AllowedHosts": "*"
+  "SwaggerAuthConfig": {
+    "Username": "doc_user",
+    "Password": "2wsx"
+  }
 }
