--- a/src/ProductExample.CommandWebHost/ProductExample.CommandWebHost.csproj
+++ b/src/ProductExample.CommandWebHost/ProductExample.CommandWebHost.csproj
@@ -13,4 +13,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Authentication\Platform.Infrastructure.Authentication.csproj" />
+    <ProjectReference Include="..\Bus.RabbitMQ\Platform.Infrastructure.Bus.RabbitMQ.csproj" />
+    <ProjectReference Include="..\Host.WebApi\Platform.Infrastructure.Host.WebApi.csproj" />
+    <ProjectReference Include="..\Validation.FluentValidation\Platform.Infrastructure.Validation.FluentValidationProvider.csproj" />
+  </ItemGroup>
+
 </Project>
