--- a/src/ProductExample.CommandWebHost/appsettings.Development.json
+++ b/src/ProductExample.CommandWebHost/appsettings.Development.json
@@ -1,8 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "\"\"AllowedHosts\": \"*\",": null,
+  "ServiceName": "ProductExample.CommandWebHost",
+  "ServiceId": "product_web_host",
+  "EndpointRoleFeatureMapFilePath": "C:\\Config\\features.json",
+  "ServiceRegistrationsFilePath": "C:\\Config\\ServiceRegistrations.json",
+  "AuthorizationServerAddress": "http://iam-dev.shohoz.com",
+  "DefaultLogLevel": "info",
+  "BusConfig": {
+    "ConnectionString": "amqp://test:test@localhost:5672/",
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueName": "ProductExample.Commands",
+    "PrefetchCount": 5,
+    "RetryCount": 2,
+    "RetryInterval": 5
+  },
+  "SwaggerAuthConfig": {
+    "Username": "doc_user",
+    "Password": "2wsx"
   }
 }
