--- a/src/ProductExample.EventWorkerHost/ProductExample.EventWorkerHost.csproj
+++ b/src/ProductExample.EventWorkerHost/ProductExample.EventWorkerHost.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductExample.EventHandlers\ProductExample.EventHandlers.csproj" />
+  </ItemGroup>
+
 </Project>
