--- a/src/ProductExample.CommandWebHost/appsettings.json
+++ b/src/ProductExample.CommandWebHost/appsettings.json
@@ -1,15 +1,16 @@
 {
   "\"\"AllowedHosts\": \"*\",": null,
   "ServiceName": "ProductExample.CommandWebHost",
-  "ServiceId": "product_web_host", 
-  "EndpointRoleFeatureMapFilePath": "C:\\Shohoz\\features.json",
-  "ServiceRegistrationsFilePath": "C:\\Shohoz\\ServiceRegistrations.json",
-  "AuthorizationServerAddress": "http://loclahost",
+  "ServiceId": "product_command_web",
+  "DefaultFilePath": "C:\\AppLog\\",
+  "EndpointRoleFeatureMapFilePath": "C:\\Config\\features.json",
+  "ServiceRegistrationsFilePath": "C:\\Config\\ServiceRegistrations.json",
+  "AuthorizationServerAddress": "http://localhost",
   "DefaultLogLevel": "info",
   "BusConfig": {
     "ConnectionString": "amqp://test:test@localhost:5672/",
-    "UserName": "guest",
-    "Password": "guest",
+    "UserName": "test",
+    "Password": "test",
     "QueueName": "ProductExample.Commands",
     "PrefetchCount": 5,
     "RetryCount": 2,
