--- a/src/Platform.Infrastracture/GenericCommandWeb/appsettings.json
+++ b/src/Platform.Infrastracture/GenericCommandWeb/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "\"\"AllowedHosts\": \"*\",": null,
+  "ServiceName": "ProductExample.CommandWebHost",
+  "ServiceId": "product",
+  "DefaultFilePath": "C:\\AppLog\\",
+  "EndpointRoleFeatureMapFilePath": "C:\\Config\\features.json",
+  "ServiceRegistrationsFilePath": "C:\\Config\\ServiceRegistrations.json",
+  "AuthorizationServerAddress": "http://localhost",
+  "DefaultLogLevel": "info",
+  "BusConfig": {
+    "ConnectionString": "amqp://test:test@localhost:5672/",
+    "UserName": "test",
+    "Password": "test",
+    "QueueName": "ProductExample.Commands",
+    "PrefetchCount": 5,
+    "RetryCount": 2,
+    "RetryInterval": 5
   },
-  "AllowedHosts": "*"
+  "SwaggerAuthConfig": {
+    "Username": "doc_user",
+    "Password": "2wsx"
+  }
 }
