--- a/src/Platform.Infrastracture/CustomException/Platform.Infrastructure.CustomException.csproj
+++ b/src/Platform.Infrastracture/CustomException/Platform.Infrastructure.CustomException.csproj
@@ -5,6 +5,10 @@
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 		<SignAssembly>False</SignAssembly>
+		<PackageId>Platform.Infrastructure.CustomException</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Md.Shahjahan</Authors>
+		<Company>BRAC IT</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
