--- a/src/Platform.Infrastracture/Bus.Abstraction/Platform.Infrastructure.Bus.Abstraction.csproj
+++ b/src/Platform.Infrastracture/Bus.Abstraction/Platform.Infrastructure.Bus.Abstraction.csproj
@@ -4,6 +4,10 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<PackageId>Platform.Infrastructure.Bus.Abstraction</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Md.Shahjahan</Authors>
+		<Company>BRAC IT</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,10 +18,7 @@
 	<ItemGroup>
 		<PackageReference Include="MassTransit" Version="8.1.3" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Core\Platform.Infrastructure.Core.csproj" />
+		<PackageReference Include="Platform.Infrastructure.Core" Version="1.0.0" />
 	</ItemGroup>
 
 </Project>
