--- a/src/Platform.Infrastracture/Bus.RabbitMQ/Platform.Infrastructure.Bus.RabbitMQ.csproj
+++ b/src/Platform.Infrastracture/Bus.RabbitMQ/Platform.Infrastructure.Bus.RabbitMQ.csproj
@@ -2,15 +2,16 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
+		<PackageId>Platform.Infrastructure.Bus.RabbitMQ</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Md.Shahjahan</Authors>
+		<Company>BRAC IT</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Bus.Abstraction\Platform.Infrastructure.Bus.Abstraction.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Bus.Abstraction" Version="1.0.0" />
 	</ItemGroup>
 
 </Project>
