--- a/src/Platform.Infrastracture/CustomResponse/Platform.Infrastructure.CustomResponse.csproj
+++ b/src/Platform.Infrastracture/CustomResponse/Platform.Infrastructure.CustomResponse.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+	  <PackageId>Platform.Infrastructure.CustomResponse</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>Md.Shahjahan</Authors>
+	  <Company>BRAC IT</Company>
   </PropertyGroup>
 
   <ItemGroup>
