--- a/src/Platform.Infrastracture/EndpointRoleFeatureMap/Platform.Infrastructure.EndpointRoleFeatureMap.csproj
+++ b/src/Platform.Infrastracture/EndpointRoleFeatureMap/Platform.Infrastructure.EndpointRoleFeatureMap.csproj
@@ -4,6 +4,10 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<PackageId>Platform.Infrastructure.EndpointRoleFeatureMap</PackageId>
+		<Version>1.0.3</Version>
+		<Authors>Md.Shahjahan</Authors>
+		<Company>BRAC IT</Company>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,16 +16,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Common\Platform.Infrastructure.Common.csproj" />
-	  <ProjectReference Include="..\ServiceRegistration.Provider\Platform.Infrastructure.ServiceRegistration.Provider.csproj" />
+		<PackageReference Include="Platform.Infrastructure.Core" Version="1.0.0" />
+		<PackageReference Include="Platform.Infrastructure.ServiceRegistration.Provider" Version="1.0.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
 </Project>
