--- a/src/Platform.Infrastracture/Validation.FluentValidation/Platform.Infrastructure.Validation.FluentValidationProvider.csproj
+++ b/src/Platform.Infrastracture/Validation.FluentValidation/Platform.Infrastructure.Validation.FluentValidationProvider.csproj
@@ -3,15 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>           
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+	  <PackageId>Platform.Infrastructure.Validation.FluentValidationProvider</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>Md.Shahjahan</Authors>
+	  <Company>BRAC IT</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.5.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Platform.Infrastructure.Core.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Core" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
