--- a/src/ProductExample/ProductExample.Aggregates/ProductExample.Aggregates.csproj
+++ b/src/ProductExample/ProductExample.Aggregates/ProductExample.Aggregates.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="Platform.Infrastructure.Common" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Platform.Infrastracture\Core\Platform.Infrastructure.Core.csproj" />
     <ProjectReference Include="..\ProductExample.Dtos\ProductExample.Dtos.csproj" />
     <ProjectReference Include="..\ProductExample.Events\ProductExample.Events.csproj" />
   </ItemGroup>
