--- a/src/ProductExample/ProductExample.Commands/ProductExample.Commands.csproj
+++ b/src/ProductExample/ProductExample.Commands/ProductExample.Commands.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Platform.Infrastracture\Core\Platform.Infrastructure.Core.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Core" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
