--- a/src/ProductExample/ProductExample.Events/ProductExample.Events.csproj
+++ b/src/ProductExample/ProductExample.Events/ProductExample.Events.csproj
@@ -8,10 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Platform.Infrastracture\Core\Platform.Infrastructure.Core.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Core" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
