--- a/src/Blog/BlogOrm/appsettings.json
+++ b/src/Blog/BlogOrm/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "UAMDatabase": "Data Source=DESKTOP-KTI6J0L\\SQLEXPRESS;Initial Catalog=BLOG;Integrated Security=true"
+    "UAMDatabase": "Host=localhost; Database=SimpleCQRS; Username=postgres; Password=postgres"
   }
 }
