--- a/src/Platform.Infrastracture/Repository/Platform.Infrastructure.Repository.EF.csproj
+++ b/src/Platform.Infrastracture/Repository/Platform.Infrastructure.Repository.EF.csproj
@@ -18,10 +18,7 @@
     <PackageReference Include="EntityFrameworkCore.Extensions" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="7.3.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Platform.Infrastructure.Core.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Core" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
