--- a/src/Platform.Infrastracture/CustomResponse/Platform.Infrastructure.CustomResponse.csproj
+++ b/src/Platform.Infrastracture/CustomResponse/Platform.Infrastructure.CustomResponse.csproj
@@ -13,10 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Platform.Infrastructure.Core.csproj" />
+    <PackageReference Include="Platform.Infrastructure.Core" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
